@@ -4,6 +4,7 @@
 
 - NEW #1789 Relax Tilt version to allow Tilt 2 (>= 1.4.1, < 3)
 - WARN #1989 Warn about coming behavior change
+- WARN Notice about removing ObjectSpace.classes and ObjectSpace.new_classes in 0.14
 
 == 0.13.1 (January 17th 2016)
 
